// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> controlled/uncontrolled behaviour works as a controlled component, no onChange, no change 1`] = `
<Select
  onChange={[Function]}
  style={Object {}}
  value="baz"
>
  <div
    value="foo"
  >
    foo
  </div>
  <div
    value="bar"
  >
    bar
  </div>
  <div
    value="baz"
  >
    baz
  </div>
</Select>
`;

exports[`<Select /> controlled/uncontrolled behaviour works correctly as an uncontrolled input 1`] = `
<Select
  defaultValue="bar"
  onChange={[Function]}
  style={Object {}}
>
  <div
    value="foo"
  >
    foo
  </div>
  <div
    value="bar"
  >
    bar
  </div>
  <div
    value="baz"
  >
    baz
  </div>
</Select>
`;

exports[`<Select /> matches snapshot 1`] = `
<Select
  onChange={[Function]}
  style={Object {}}
/>
`;
